# ai-recipes

./: .env.example  .gitignore  DEPLOYMENT_STORAGE_NOTES.md  Makefile  README.md  RECIPE_VIEWER_README.md  STREAMLIT_DEPLOYMENT.md  example_manifest.json  init.sh  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: update-requirements.yml
.streamlit/: config.toml  secrets.toml.example
app/: config.py  main.py  recipe_html_generator.py  recipe_utils.py  utils.py
app/components/: __init__.py  batch_processor.py  clickable_images.py  download_manager.py  image_cropper.py  image_upload.py  recipe_display.py
app/pages/: recipe_collection.py  recipe_viewer.py
docs/: manual_cropping.md  streamlit_manual_cropping.md
src/: cli.py  config.py  converter.py  formatter.py  llm_client.py  models.py  paprika_client.py
src/extractors/: __init__.py  clipboard.py  image.py  manual_cropper.py  pdf.py  pdf_image_extractor.py  recipe_image_extractor.py  recipe_image_extractor_manual.py  web.py  web_image_extractor.py
